--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,7 +13,7 @@
             <nav class="site-nav">
                 <a href="{{ site.baseurl }}/lovelace/" class="{% if page.url == '/lovelace/' %}active{% endif %}">lovelace</a>
                 <a href="{{ site.baseurl }}/wolfe/" class="{% if page.url == '/wolfe/' %}active{% endif %}">wolfe</a>
-                <a href="{{ site.baseurl }}/listen" class="{% if page.url == '/listen' %}active{% endif %}">alaska</a>
+                <a href="{{ site.baseurl }}/alaska" class="{% if page.url == '/alaska' %}active{% endif %}">alaska</a>
             </nav>
         </header>
         {{ content }}
