--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="{{ site.baseurl }}/css/main.css">
     <link rel="shortcut icon" href="{{ site.baseurl }}/assets/fav.ico">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
     <title>{{ site.title }}</title>
 </head>
 <body>
@@ -12,9 +13,18 @@
         <header class="site-header">
             <h1 class="site-title"><a href="{{ site.baseurl }}/">{{ site.title }}</a></h1>
             <nav class="site-nav">
-                <a href="{{ site.baseurl }}/lovelace/" class="{% if page.url == '/lovelace/' %}active{% endif %}">lovelace</a>
-                <a href="{{ site.baseurl }}/wolfe/" class="{% if page.url == '/wolfe/' %}active{% endif %}">wolfe</a>
-                <a href="{{ site.baseurl }}/alaska" class="{% if page.url == '/alaska' %}active{% endif %}">alaska</a>
+                <a href="{{ site.baseurl }}/lovelace/" class="{% if page.url == '/lovelace/' %}active{% endif %}">lovelace</i></a>
+                <a href="{{ site.baseurl }}/wolfe/" class="{% if page.url == '/wolfe/' %}active{% endif %}">wolfe</i></a>
+                <a href="{{ site.baseurl }}/alaska" class="{% if page.url == '/alaska' %}active{% endif %}">alaska</i></a>
+                <div class="icons">
+                  <a href="https://twitter.com/gothwski"><i class="fa fa-twitter"></i></a>
+                  <a href="https://hypem.com/gothwski"><i class="fa fa-heart-o"></i></a>
+                  <a href="https://www.lastfm.es/user/gothwski"><i class="fa fa-lastfm"></i>
+                  <a href="http://github.com/gothwski"><i class="fa fa-github-alt"></i></a>
+                  <a href="https://angel.co/gothwski"><i class="fa fa-angellist"></i></a>
+                  <a href="https://plus.google.com/u/0/118321894320597947270/posts"><i class="fa fa-google-plus"></i></a>
+                  <a href="https://www.facebook.com/MUSICAPARAMUDARSEAALASKA"><i class="fa fa-facebook"></i></a>
+                </div>
             </nav>
         </header>
         {{ content }}
