--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -12,7 +12,7 @@ main {
             text-decoration: none;
         }
     }
-    .site-nav {
+    .site-nav, .icons{
         > a {
             color: $text-color;
             &:hover {
@@ -23,6 +23,9 @@ main {
             }
             + a {
                 margin-left: 1rem;
+            }
+            + .icons {
+              float: right;
             }
         }
     }
