--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,19 +11,20 @@
 <body>
     <main>
         <header class="site-header">
-            <h1 class="site-title"><a href="{{ site.baseurl }}/">{{ site.title }}</a></h1>
+            <h1 class="site-title">
+            <img class="avatar" src="{{ site.baseurl }}/assets/audio.png"> 
+            </h1>
             <nav class="site-nav">
+                <a href="{{ site.baseurl }}/">{{ site.title }}</a>
                 <a href="{{ site.baseurl }}/lovelace/" class="{% if page.url == '/lovelace/' %}active{% endif %}">lovelace</i></a>
-                <a href="{{ site.baseurl }}/wolfe/" class="{% if page.url == '/wolfe/' %}active{% endif %}">wolfe</i></a>
-                <a href="{{ site.baseurl }}/alaska" class="{% if page.url == '/alaska' %}active{% endif %}">alaska</i></a>
+                <a href="{{ site.baseurl }}/alaska/" class="{% if page.url == '/alaska/' %}active{% endif %}">alaska</i></a>
+                <a href="{{ site.baseurl }}/wolfe" class="{% if page.url == '/wolfe' %}active{% endif %}">wolfe</i></a>
                 <div class="icons">
+                  <a href="https://soundcloud.com/gothwski"><i class="fa fa-soundcloud"></i></i></a>
                   <a href="https://twitter.com/gothwski"><i class="fa fa-twitter"></i></a>
-                  <a href="https://hypem.com/gothwski"><i class="fa fa-heart-o"></i></a>
-                  <a href="https://www.lastfm.es/user/gothwski"><i class="fa fa-lastfm"></i>
+                  <a href="http://www.goodreads.com/user/show/22197288-ariana"><i class="fa fa-book"></i></a>
+                  <a href="https://www.instagram.com/gothwski/"><i class="fa fa-instagram"></i></a>
                   <a href="http://github.com/gothwski"><i class="fa fa-github-alt"></i></a>
-                  <a href="https://angel.co/gothwski"><i class="fa fa-angellist"></i></a>
-                  <a href="https://plus.google.com/u/0/118321894320597947270/posts"><i class="fa fa-google-plus"></i></a>
-                  <a href="https://www.facebook.com/MUSICAPARAMUDARSEAALASKA"><i class="fa fa-facebook"></i></a>
                 </div>
             </nav>
         </header>
